# dicebag

./: .env.sample  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  components.scss  index.html  index.scss
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  tests.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  README.md
core/src/: campaign.rs  db.rs  dice.rs  lib.rs  player.rs
server/: .env.sample  Cargo.toml  Dockerfile  Dockerfile.improvedmaybe  README.md  diesel.toml  docker-compose.yml
server/migrations/2021-07-07-032322_create_characters/: up.sql
server/migrations/2022-01-16-181332_create_campaigns/: up.sql
server/migrations/2022-01-16-184538_create_characters/: up.sql
server/src/: context.rs  main.rs
server/src/resolver/: mod.rs
server/src/schema/: campaign.rs  character.rs  db.rs  mod.rs
src/: character_sheet.rs  components.rs  dicebag.rs  lib.rs  stat_block.rs
src/character_sheet/: armor_class.rs  attacks.rs  character_info.rs  character_sheet.rs  death_saving_throws.rs  hit_dice.rs  hit_points.rs  initiative.rs  inspiration.rs  mod.rs  money.rs  passive_perception.rs  proficiency_bonus.rs  saving_throws.rs  skills.rs  speed.rs  stat_block.rs  text_block.rs
src/dice_tower/: tower.rs
ui/: Cargo.toml  README.md  index.html
ui/src/: characters.rs  components.rs  components.scss  dicebag.rs  home.rs  index.html  index.scss  lib.rs  main.rs  navigation.rs  queries.graphql  queries.rs  schema.json  services.rs  utils.rs
ui/src/character_sheet/: armor_class.rs  character_info.rs  character_sheet.rs  death_saving_throws.rs  hit_points.rs  initiative.rs  inspiration.rs  mocks.rs  mod.rs  money.rs  passive_perception.rs  sheet.rs  speed.rs  stat_block.rs
ui/src/components/: button.rs  icon.rs  mod.rs  text_field.rs
ui/src/dice_tower/: mod.rs  tower.rs
ui/src/graphql/: queries.graphql  queries.rs  schema.json
ui/src/music_player/: mod.rs
ui/src/pages/: campaign.rs  campaigns.rs  characters.rs  home.rs  mod.rs  not_found.rs
ui/src/pages/campaign/: campaign_page.rs  initiative.rs  initiative_tracker.rs  mod.rs
ui/src/pages/character_sheet/: armor_class.rs  attacks.rs  character_info.rs  death_saving_throws.rs  hit_dice.rs  hit_points.rs  initiative.rs  inspiration.rs  mocks.rs  money.rs  passive_perception.rs  proficiency_bonus.rs  saving_throws.rs  sheet.rs  skills.rs  speed.rs  stat_block.rs  text_block.rs
ui/src/services/: mod.rs  use_form.rs  use_query.rs
ui/src/styles/: base.scss  campaign.scss  character-sheet.scss  characters.scss  components.scss
