[package]
name = "dicebag-server"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesaywer.dev>"]
edition = "2018"

[dependencies]
# diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.15.0"
# TODO: Move to main juniper repo once rocket 0.5.0-rc.1 PR is merged
juniper = { git = "https://github.com/toxeus/juniper", branch = "rocket" }
juniper_rocket_async = { git = "https://github.com/toxeus/juniper", branch = "rocket" }
rocket = "0.5.0-rc.1"
serde_json = "1.0.64"
