[package]
name = "dicebag-server"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesaywer.dev>"]
edition = "2018"

[dependencies]
# diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.15.0"
# TODO: Move to versioned crate once it's released
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_rocket_async = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
rocket = "0.5.0-rc.1"
serde_json = "1.0.64"
