[package]
name = "dicebag"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesawyer.dev>"]
edition = "2018"

[profile.release]
# Increases execution speed at the cost of compile time
lto = true

[dependencies]
anyhow = "1.0.57"
getrandom = { version = "0.2.6", features = ["js"] }
gloo-console = "0.2.1"
graphql_client = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"]}
serde = "1.0.137"
serde_json = "1.0.80"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
yew = "0.19.3"
yew-router = "0.16.0"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
